force-app/main/default/objects/Related_Marketing_Activity__c/Related_Marketing_Activity__c.object-meta.xml
<CustomObject>
    <label>Related Marketing Activity</label>
    <nameField>
        <displayFormat>RMA-{00000000}</displayFormat>
        <label>Related Marketing Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Marketing Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>