force-app/main/default/objects/Related_Marketing_Activity__c/fields/Activity_Channel__c.field-meta.xml
<CustomField>
    <fullName>Activity_Channel__c</fullName>
    <formula>TEXT(Marketing_Activity__r.Channel__c)</formula>
    <label>Activity Channel</label>
    <type>Text</type>
</CustomField>