force-app/main/default/objects/Related_Marketing_Activity__c/fields/Activity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_Date__c</fullName>
    <formula>Marketing_Activity__r.End_Date__c</formula>
    <label>Activity End Date</label>
    <type>Date</type>
</CustomField>