force-app/main/default/objects/Related_Marketing_Activity__c/fields/Activity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Record_Type__c</fullName>
    <formula>Marketing_Activity__r.RecordType.Name</formula>
    <label>Activity Record Type</label>
    <type>Text</type>
</CustomField>