force-app/main/default/objects/Related_Marketing_Activity__c/fields/Activity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_Date__c</fullName>
    <formula>Marketing_Activity__r.Start_Date__c</formula>
    <label>Activity Start Date</label>
    <type>Date</type>
</CustomField>