force-app/main/default/objects/Related_Marketing_Activity__c/fields/Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Status__c</fullName>
    <formula>TEXT(Marketing_Activity__r.Status__c)</formula>
    <label>Activity Status</label>
    <type>Text</type>
</CustomField>