force-app/main/default/objects/Related_Marketing_Activity__c/fields/Activity_Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>Activity_Sub_Channel__c</fullName>
    <formula>TEXT(Marketing_Activity__r.Sub_Channel__c )</formula>
    <label>Activity Sub Channel</label>
    <type>Text</type>
</CustomField>