force-app/main/default/objects/Related_Marketing_Activity__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Marketing Activities</relationshipLabel>
    <relationshipName>Related_Marketing_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>