force-app/main/default/objects/Related_Marketing_Activity__c/fields/In_Village_Brand_Activity__c.field-meta.xml
<CustomField>
    <fullName>In_Village_Brand_Activity__c</fullName>
    <label>In Village Brand Activity</label>
    <referenceTo>In_Village_Brand_Activity__c</referenceTo>
    <relationshipLabel>Related Marketing Activities</relationshipLabel>
    <relationshipName>Related_Marketing_Activities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>