force-app/main/default/objects/Related_Marketing_Activity__c/fields/Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity__c</fullName>
    <label>Marketing Activity</label>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipLabel>Related Marketing Activities</relationshipLabel>
    <relationshipName>Related_Marketing_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>