force-app/main/default/objects/Related_Marketing_Activity__c/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <formula>Marketing_Activity__r.Marketing_Campaign__r.Name</formula>
    <label>Marketing Campaign</label>
    <type>Text</type>
</CustomField>